Initial commit or update

--- a/ABC.html
+++ b/ABC.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="page.css">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <title>Machine Learning - Udemy</title>
+  <title>Data Science - Udemy</title>
 </head>
 <body>
   <header>
@@ -24,58 +24,86 @@
   <hr/>
 
   <section data-aos="fade-up">
-    <h2>Machine Learning</h2>
+    <h2>Data Science</h2>
     <p>
-      Dive deep into Machine Learning and build models that can learn from data. This course covers supervised, unsupervised, and real-world ML use cases.
+      Data science combines programming, math, and business knowledge to extract insights from data — helping organizations make smarter decisions.
     </p>
   </section>
 
   <section data-aos="fade-up">
     <h3>Course Curriculum</h3>
     <ul>
-      <li>✔️ Introduction to Machine Learning</li>
-      <li>✔️ Supervised vs Unsupervised Learning</li>
-      <li>✔️ Regression, Classification, Clustering</li>
-      <li>✔️ Model Evaluation and Tuning</li>
-      <li>✔️ Real-world Projects and Case Studies</li>
+      <li> Introduction to Data Science</li>
+      <li> Python for Data Science</li>
+      <li> Pandas & Data Cleaning</li>
+      <li> Data Visualization with Matplotlib/Seaborn</li>
+      <li> Machine Learning Basics</li>
     </ul>
   </section>
 
   <section data-aos="fade-up">
     <h3>What You’ll Learn</h3>
     <ul>
-      <li>Build and train ML models using Python</li>
-      <li>Use libraries like scikit-learn and pandas</li>
-      <li>Work with real datasets (CSV, JSON)</li>
-      <li>Evaluate model accuracy and performance</li>
-      <li>Understand ML workflows in industry</li>
+      <li>Data collection and cleaning</li>
+      <li>Exploratory data analysis (EDA)</li>
+      <li>Basic statistics and data visualization</li>
+      <li>Using tools like Python, pandas, and matplotlib</li>
+      <li>Presenting results in reports or dashboards</li>
+    </ul>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Why Learn Data Science?</h3>
+    <ul>
+      <li>High-paying, in-demand field</li>
+      <li>Helps make data-driven decisions</li>
+      <li>Applicable in marketing, healthcare, finance, and more</li>
+      <li>Combines creativity and analytical thinking</li>
     </ul>
   </section>
 
   <section data-aos="fade-up">
     <h3>Watch a Sample Lesson</h3>
     <div style="text-align:center">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GwIo3gDZCVQ" frameborder="0" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xC-c7E5PK0Y" frameborder="0" allowfullscreen></iframe>
     </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Resources & Tools</h3>
+    <ul>
+      <li><a href="#">Download Sample Notebook (.ipynb)</a></li>
+      <li><a href="https://www.kaggle.com/datasets">Explore Public Datasets</a></li>
+      <li><a href="#">Python Setup Guide (PDF)</a></li>
+      <li><a href="#">Cheatsheet - Pandas & Numpy</a></li>
+    </ul>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Career Paths</h3>
+    <ul>
+      <li>Data Analyst (Avg Salary: $70k - $100k)</li>
+      <li>Data Scientist (Avg Salary: $100k - $150k)</li>
+      <li>ML Engineer (Avg Salary: $110k - $160k)</li>
+    </ul>
   </section>
 
   <section data-aos="fade-up">
     <h3>FAQs</h3>
     <ul>
-      <li><strong>Q:</strong> Is Python required for this course?<br><strong>A:</strong> Yes, and we provide basic Python tutorials too.</li>
-      <li><strong>Q:</strong> Will I be able to build real ML models?<br><strong>A:</strong> Yes, with hands-on projects and datasets.</li>
+      <li><strong>Q:</strong> Do I need a math background?<br><strong>A:</strong> Basic statistics is helpful but not mandatory.</li>
+      <li><strong>Q:</strong> Can I learn this without coding experience?<br><strong>A:</strong> Yes, beginners can start with visual tools and learn coding step-by-step.</li>
     </ul>
   </section>
 
   <section data-aos="fade-up">
     <h3>Get Started</h3>
     <p style="text-align:center">
-      <a href="Signup.html" class="button">Sign up</a> and start building intelligent systems! Already registered? <a href="login.html">Log in</a>.
+      <a href="Signup.html">Sign up</a> and start exploring data! Already have an account? <a href="login.html">Log in</a>.
     </p>
   </section>
 
   <hr/>
-  <!-- Same Footer as Linux Essentials -->
   <footer>
     <h2>Explore Top Courses for CS Students</h2>
 
