--- a/AWSBasics.html
+++ b/AWSBasics.html
@@ -1,144 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="page.css">
-<title>AWS Basics - Udemy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="page.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>AWS Basics - Udemy</title>
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <span class="logo"><b>Udemy</b></span>
+      <nav class="nav-links">
+        <input class="search" type="text" placeholder="Search About Courses">
+        <a href="courses.html">Explore Courses</a>
+        <a href="login.html">Log in</a>
+        <a href="Signup.html">Register</a>
+        <a href="index.html">Homepage</a>
+      </nav>
+    </div>
+  </header>
+  <hr/>
 
+  <section data-aos="fade-up">
+    <h2>AWS Basics</h2>
+    <p>
+      Learn the fundamentals of Amazon Web Services (AWS), the leading cloud computing platform used by organizations worldwide.
+    </p>
+  </section>
 
-<header>
-  <div class="header-container">
-    <span class="logo"><b>Udemy</b></span>
-    <nav class="nav-links">
-      <input class="search" type="text" placeholder="Search About Courses">
-      <a href="courses.html">Explore Courses</a>
-      <a href="login.html">Log in</a>
-      <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
-    </nav>
-  </div>
-</header>
-<hr/>
-
-<section>
-  <h2 style="text-align:center;">AWS Basics</h2>
-  <p>
-    Amazon Web Services (AWS) is the world’s leading cloud computing platform, offering reliable, scalable, and inexpensive cloud computing services.
-    This introductory section is designed to help you understand what AWS is, why it's so widely used, and how you can start exploring it as a beginner.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">What is AWS?</h3>
-  <p>
-    AWS is a collection of over 200 fully featured services that help individuals and businesses build and run applications in the cloud.
-    It was launched by Amazon in 2006 and has grown into the most comprehensive and broadly adopted cloud platform in the world.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Key Services You Should Know</h3>
-  <ul >
-    <li><b>Amazon EC2:</b> Virtual servers to run your applications.</li>
-    <li><b>Amazon S3:</b> Secure and scalable storage for your data.</li>
-    <li><b>Amazon RDS:</b> Managed relational databases like MySQL and PostgreSQL.</li>
-    <li><b>Lambda:</b> Serverless computing to run code without managing servers.</li>
-    <li><b>CloudFront:</b> Content delivery network (CDN) to deliver data faster to users globally.</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Why Learn AWS?</h3>
-  <ul>
-    <li>Highly demanded by employers across industries.</li>
-    <li>Useful for developers, data scientists, DevOps engineers, and architects.</li>
-    <li>Helps reduce costs and increase scalability of applications.</li>
-    <li>Allows you to experiment, build, and deploy projects easily in the cloud.</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Real-World Applications</h3>
-  <p>
-    AWS is used by startups, enterprises, government organizations, and educational institutions to power websites, store and analyze data,
-    run mobile and web apps, host machine learning models, and much more.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">How to Start</h3>
-  <ul>
-    <li>Create a free AWS account and explore the AWS Free Tier.</li>
-    <li>Start with core services like EC2, S3, and RDS to understand the basics.</li>
-    <li>Experiment with tutorials and sample projects.</li>
-    <li>Learn common use cases: hosting a static website, setting up a database, or deploying a simple app.</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Ready to Explore?</h3>
-  <p>
-    <a href="Signup.html">Sign up</a> today and start learning AWS to build powerful, scalable applications in the cloud.
-    Already have an account? <a href="login.html">Log in</a> to continue your journey!
-  </p>
-</section>
-
-<hr/>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
+  <section data-aos="fade-up">
+    <h3>Course Curriculum</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li>✔️ Introduction to Cloud Computing</li>
+      <li>✔️ AWS Global Infrastructure</li>
+      <li>✔️ Core AWS Services (EC2, S3, RDS)</li>
+      <li>✔️ IAM & Security</li>
+      <li>✔️ Hosting Static Websites on AWS</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Data & AI</h3>
+  <section data-aos="fade-up">
+    <h3>What You’ll Learn</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li>Understand AWS core services</li>
+      <li>Create and configure AWS accounts</li>
+      <li>Launch virtual servers (EC2)</li>
+      <li>Manage storage using S3</li>
+      <li>Apply basic security and IAM roles</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
+  <section data-aos="fade-up">
+    <h3>Why Learn AWS?</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li>Most in-demand cloud platform</li>
+      <li>Used by top tech companies</li>
+      <li>Start your DevOps or Cloud career</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
+  <section data-aos="fade-up">
+    <h3>Watch a Sample Lesson</h3>
+    <div style="text-align:center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ulprqHHWlng" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Resources & Tools</h3>
     <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      <li><a href="#">AWS Quick Start Guide (PDF)</a></li>
+      <li><a href="#">Cloud Practitioner Exam Tips</a></li>
+      <li><a href="#">AWS Console Setup Guide</a></li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Company</h3>
+  <section data-aos="fade-up">
+    <h3>Career Paths</h3>
     <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
+      <li>Cloud Engineer</li>
+      <li>AWS Solutions Architect</li>
+      <li>DevOps Engineer</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+  <section data-aos="fade-up">
+    <h3>FAQs</h3>
+    <ul>
+      <li><strong>Q:</strong> Do I need to know coding beforehand?<br><strong>A:</strong> No, AWS basics is beginner-friendly.</li>
+      <li><strong>Q:</strong> Is AWS free to try?<br><strong>A:</strong> Yes, AWS offers a Free Tier for beginners.</li>
+    </ul>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Get Started</h3>
+    <p style="text-align:center">
+      <a href="Signup.html" class="button">Sign up</a> and begin your cloud journey! Already have an account? <a href="login.html">Log in</a>.
+    </p>
+  </section>
+
+  <hr/>
+  <footer>
+    <h2>Explore Top Courses for CS Students</h2>
+
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="Python.html">Python Programming</a></li>
+        <li><a href="Java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-bottom">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
