--- a/DataScience.html
+++ b/DataScience.html
@@ -1,121 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="page.css">
-<title>Data Science - Udemy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="page.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>Data Science - Udemy</title>
 </head>
 <body>
-<header>
-  <div class="header-container">
-    <span class="logo"><b>Udemy</b></span>
-    <nav class="nav-links">
-      <input class="search" type="text" placeholder="Search About Courses">
-      <a href="courses.html">Explore Courses</a>
-      <a href="login.html">Log in</a>
-      <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
-    </nav>
-  </div>
-</header>
-<hr/>
-<section>
-  <h2 style="text-align:center;">Data Science</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Data science combines programming, math, and business knowledge to extract insights from data — helping organizations make smarter decisions.
-  </p>
-</section>
+  <header>
+    <div class="header-container">
+      <span class="logo"><b>Udemy</b></span>
+      <nav class="nav-links">
+        <input class="search" type="text" placeholder="Search About Courses">
+        <a href="courses.html">Explore Courses</a>
+        <a href="login.html">Log in</a>
+        <a href="Signup.html">Register</a>
+        <a href="index.html">Homepage</a>
+      </nav>
+    </div>
+  </header>
+  <hr/>
 
-<section>
-  <h3 style="text-align:center;">What You’ll Learn</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Data collection and cleaning</li>
-    <li>Exploratory data analysis (EDA)</li>
-    <li>Basic statistics and data visualization</li>
-    <li>Using tools like Python, pandas, and matplotlib</li>
-    <li>Presenting results in reports or dashboards</li>
-  </ul>
-</section>
+  <section data-aos="fade-up">
+    <h2>Data Science</h2>
+    <p>
+      Dive into the world of Data Science and learn how to analyze, visualize, and make predictions using data. Master Python, statistics, and machine learning techniques.
+    </p>
+  </section>
 
-<section>
-  <h3 style="text-align:center;">Why Learn Data Science?</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>High-paying, in-demand field</li>
-    <li>Helps make data-driven decisions</li>
-    <li>Applicable in marketing, healthcare, finance, and more</li>
-    <li>Combines creativity and analytical thinking</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Real-World Uses</h3>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Sales forecasting, market analysis, user behavior prediction, and building dashboards.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Get Started</h3>
-  <p style="max-width:800px; margin:auto; text-align:center;">
-    <a href="Signup.html">Sign up</a> and start exploring data!
-    Already have an account? <a href="login.html">Log in</a>.
-  </p>
-</section>
-
-<hr/>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
+  <section data-aos="fade-up">
+    <h3>Course Curriculum</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li>Introduction to Data Science</li>
+      <li>Python for Data Analysis</li>
+      <li>Statistics and Probability</li>
+      <li>Data Visualization (Matplotlib, Seaborn)</li>
+      <li>Machine Learning Basics</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Data & AI</h3>
+  <section data-aos="fade-up">
+    <h3>What You’ll Learn</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li>Use Python for data analysis and cleaning</li>
+      <li>Understand core statistics and probability</li>
+      <li>Visualize data using modern libraries</li>
+      <li>Build basic machine learning models</li>
+      <li>Understand real-world data problems</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
+  <section data-aos="fade-up">
+    <h3>Why Learn Data Science?</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li>Top career in the tech industry</li>
+      <li>In-demand skill across industries</li>
+      <li>Drive business decisions with insights</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
+  <section data-aos="fade-up">
+    <h3>Watch a Sample Lesson</h3>
+    <div style="text-align:center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xC-c7E5PK0Y" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Resources & Tools</h3>
     <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      <li><a href="#">Python for Data Science Cheatsheet</a></li>
+      <li><a href="#">Pandas Documentation</a></li>
+      <li><a href="#">Machine Learning with Scikit-learn</a></li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Company</h3>
+  <section data-aos="fade-up">
+    <h3>Career Paths</h3>
     <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
+      <li>Data Scientist</li>
+      <li>Data Analyst</li>
+      <li>Machine Learning Engineer</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+  <section data-aos="fade-up">
+    <h3>FAQs</h3>
+    <ul>
+      <li><strong>Q:</strong> Do I need to know programming already?<br><strong>A:</strong> Basic Python is helpful, but we cover it from scratch.</li>
+      <li><strong>Q:</strong> Will this help me become a Data Scientist?<br><strong>A:</strong> Yes, it's a great foundational step into the field.</li>
+    </ul>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Get Started</h3>
+    <p style="text-align:center">
+      <a href="Signup.html" class="button">Sign up</a> and start your data science journey! Already have an account? <a href="login.html">Log in</a>.
+    </p>
+  </section>
+
+  <hr/>
+  <footer>
+    <h2>Explore Top Courses for CS Students</h2>
+
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="Python.html">Python Programming</a></li>
+        <li><a href="Java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-bottom">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
