--- a/Python.html
+++ b/Python.html
@@ -4,124 +4,157 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="page.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Python Programming - Udemy</title>
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <span class="logo"><b>Udemy</b></span>
+      <nav class="nav-links">
+        <input class="search" type="text" placeholder="Search About Courses">
+        <a href="courses.html">Explore Courses</a>
+        <a href="login.html">Log in</a>
+        <a href="Signup.html">Register</a>
+        <a href="index.html">Homepage</a>
+      </nav>
+    </div>
+  </header>
+  <hr/>
 
-<header>
-  <div class="header-container">
-    <span class="logo"><b>Udemy</b></span>
-    <nav class="nav-links">
-      <input class="search" type="text" placeholder="Search About Courses">
-      <a href="courses.html">Explore Courses</a>
-      <a href="login.html">Log in</a>
-      <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
-    </nav>
-  </div>
-</header>
-<hr/>
+  <section data-aos="fade-up">
+    <h2>Python Programming</h2>
+    <p>Learn Python from scratch — one of the most popular, versatile, and beginner-friendly programming languages in the world.</p>
+  </section>
 
-<section>
-  <h2 style="text-align:center;">Python Programming</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Python is a beginner-friendly programming language known for its simplicity and versatility.
-    From web apps to AI and data science, Python is everywhere.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">What You’ll Learn</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Basic syntax, variables, loops, and conditionals</li>
-    <li>Functions and modules</li>
-    <li>Working with data types and files</li>
-    <li>Introduction to libraries like NumPy and pandas</li>
-    <li>Small projects to apply your skills</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Why Learn Python?</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Easy to learn and read, perfect for beginners</li>
-    <li>Widely used in data science, AI, and web development</li>
-    <li>Large supportive community and countless resources</li>
-    <li>Great for rapid prototyping and automation</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Real-World Uses</h3>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Web apps, data analysis, machine learning, automation scripts, chatbots, and more.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Get Started</h3>
-  <p style="max-width:800px; margin:auto; text-align:center;">
-    <a href="Signup.html">Sign up</a> and begin your Python journey today!
-    Already have an account? <a href="login.html">Log in</a> to practice.
-  </p>
-</section>
-
-<hr/>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
+  <section data-aos="fade-up">
+    <h3>Course Curriculum</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li>Python Basics and Syntax</li>
+      <li>Data Types and Control Structures</li>
+      <li>Functions and Modules</li>
+      <li>File Handling</li>
+      <li>Object-Oriented Programming</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Data & AI</h3>
+  <section data-aos="fade-up">
+    <h3>What You’ll Learn</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li>Write clean and efficient Python code</li>
+      <li>Understand OOP concepts</li>
+      <li>Build real-world projects</li>
+      <li>Read and write files</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
+  <section data-aos="fade-up">
+    <h3>Why Learn Python?</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li>High demand across industries</li>
+      <li>Foundation for AI, ML, and Data Science</li>
+      <li>Beginner-friendly syntax</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
+  <section data-aos="fade-up">
+    <h3>Sample Lesson</h3>
+    <div style="text-align:center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/_uQrJ0TkZlc" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Resources & Tools</h3>
     <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      <li><a href="#">Python Cheat Sheet (PDF)</a></li>
+      <li><a href="#">Beginner Projects List</a></li>
+      <li><a href="#">Python IDE Setup Guide</a></li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Company</h3>
+  <section data-aos="fade-up">
+    <h3>Career Paths</h3>
     <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
+      <li>Python Developer</li>
+      <li>Data Analyst</li>
+      <li>Backend Developer</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+  <section data-aos="fade-up">
+    <h3>FAQs</h3>
+    <ul>
+      <li><strong>Q:</strong> Is Python good for beginners?<br><strong>A:</strong> Yes! It’s one of the most recommended first languages.</li>
+      <li><strong>Q:</strong> Can I use it for web development?<br><strong>A:</strong> Yes, using frameworks like Django and Flask.</li>
+    </ul>
+  </section>
 
+  <section data-aos="fade-up">
+    <h3>Get Started</h3>
+    <p style="text-align:center">
+      <a href="Signup.html" class="button">Sign up</a> to master Python. Already registered? <a href="login.html">Log in</a>.
+    </p>
+  </section>
+
+  <hr/>
+  <footer>
+    <h2>Explore Top Courses for CS Students</h2>
+
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="Python.html">Python Programming</a></li>
+        <li><a href="Java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-bottom">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
-   
-
