--- a/DSA.html
+++ b/DSA.html
@@ -1,121 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="page.css">
-<title>Data Structures & Algorithms - Udemy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="page.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>Data Structures & Algorithms - Udemy</title>
 </head>
 <body>
-<header>
-  <div class="header-container">
-    <span class="logo"><b>Udemy</b></span>
-    <nav class="nav-links">
-      <input class="search" type="text" placeholder="Search About Courses">
-      <a href="courses.html">Explore Courses</a>
-      <a href="login.html">Log in</a>
-      <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
-    </nav>
-  </div>
-</header>
-<hr/>
-<section>
-  <h2 style="text-align:center;">Data Structures & Algorithms (DSA)</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    DSA is the foundation of efficient programming. Understanding how to store, organize, and process data helps you write optimized, scalable code — essential for coding interviews and real-world applications.
-  </p>
-</section>
+  <header>
+    <div class="header-container">
+      <span class="logo"><b>Udemy</b></span>
+      <nav class="nav-links">
+        <input class="search" type="text" placeholder="Search About Courses">
+        <a href="courses.html">Explore Courses</a>
+        <a href="login.html">Log in</a>
+        <a href="Signup.html">Register</a>
+        <a href="index.html">Homepage</a>
+      </nav>
+    </div>
+  </header>
+  <hr/>
 
-<section>
-  <h3 style="text-align:center;">What You’ll Learn</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Arrays, linked lists, stacks, and queues</li>
-    <li>Trees, graphs, and hash tables</li>
-    <li>Sorting and searching algorithms</li>
-    <li>Time and space complexity (Big O notation)</li>
-    <li>Practice problems to build logic</li>
-  </ul>
-</section>
+  <section data-aos="fade-up">
+    <h2>Data Structures & Algorithms (DSA)</h2>
+    <p>
+      Master the foundations of programming by learning how data structures work and how to implement efficient algorithms for solving complex problems.
+    </p>
+  </section>
 
-<section>
-  <h3 style="text-align:center;">Why Learn DSA?</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Must-have for technical interviews</li>
-    <li>Helps write faster, more efficient code</li>
-    <li>Builds analytical and problem-solving skills</li>
-    <li>Foundation for advanced topics in computer science</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Real-World Uses</h3>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Optimizing search engines, building social networks, designing databases, and improving app performance.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Get Started</h3>
-  <p style="max-width:800px; margin:auto; text-align:center;">
-    <a href="Signup.html">Sign up</a> to master DSA from scratch!
-    Already have an account? <a href="login.html">Log in</a> and practice problems.
-  </p>
-</section>
-
-<hr/>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
+  <section data-aos="fade-up">
+    <h3>Course Curriculum</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li>Introduction to DSA & Time Complexity</li>
+      <li>Arrays, Strings, and Linked Lists</li>
+      <li>Stacks, Queues, and Hash Tables</li>
+      <li>Trees, Graphs, and Recursion</li>
+      <li>Sorting & Searching Algorithms</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Data & AI</h3>
+  <section data-aos="fade-up">
+    <h3>What You’ll Learn</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li>Analyze code efficiency using Big O notation</li>
+      <li>Implement key data structures from scratch</li>
+      <li>Solve problems using recursion and dynamic programming</li>
+      <li>Understand traversal algorithms for trees and graphs</li>
+      <li>Prepare for coding interviews and contests</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
+  <section data-aos="fade-up">
+    <h3>Why Learn DSA?</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li>Core subject for software development interviews</li>
+      <li>Improves logic-building and problem-solving</li>
+      <li>Applicable in all major tech domains</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
+  <section data-aos="fade-up">
+    <h3>Watch a Sample Lesson</h3>
+    <div style="text-align:center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/8hly31xKli0" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Resources & Tools</h3>
     <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      <li><a href="#">DSA Cheat Sheet PDF</a></li>
+      <li><a href="#">LeetCode Practice Tracker</a></li>
+      <li><a href="#">Code Templates (C++, Python, Java)</a></li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Company</h3>
+  <section data-aos="fade-up">
+    <h3>Career Paths</h3>
     <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
+      <li>Software Developer</li>
+      <li>Competitive Programmer</li>
+      <li>Backend Engineer</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+  <section data-aos="fade-up">
+    <h3>FAQs</h3>
+    <ul>
+      <li><strong>Q:</strong> Is this course good for interview prep?<br><strong>A:</strong> Yes! It is designed for both beginners and interview-level preparation.</li>
+      <li><strong>Q:</strong> Can I use any programming language?<br><strong>A:</strong> Yes, code examples are provided in C++, Java, and Python.</li>
+    </ul>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Get Started</h3>
+    <p style="text-align:center">
+      <a href="Signup.html" class="button">Sign up</a> and become a problem-solving pro! Already registered? <a href="login.html">Log in</a>.
+    </p>
+  </section>
+
+  <hr/>
+  <footer>
+    <h2>Explore Top Courses for CS Students</h2>
+
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="Python.html">Python Programming</a></li>
+        <li><a href="Java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-bottom">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
