--- a/HTMLandCSS.html
+++ b/HTMLandCSS.html
@@ -4,121 +4,159 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="page.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>HTML & CSS - Udemy</title>
 </head>
 <body>
-<header>
-  <div class="header-container">
-    <span class="logo"><b>Udemy</b></span>
-    <nav class="nav-links">
-      <input class="search" type="text" placeholder="Search About Courses">
-      <a href="courses.html">Explore Courses</a>
-      <a href="login.html">Log in</a>
-      <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
-    </nav>
-  </div>
-</header>
-<hr/>
-<section>
-  <h2 style="text-align:center;">HTML & CSS</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    HTML (HyperText Markup Language) and CSS (Cascading Style Sheets) are the core building blocks of the web.
-    Together, they let you structure web pages and style them to look modern, responsive, and visually appealing.
-  </p>
-</section>
+  <header>
+    <div class="header-container">
+      <span class="logo"><b>Udemy</b></span>
+      <nav class="nav-links">
+        <input class="search" type="text" placeholder="Search About Courses">
+        <a href="courses.html">Explore Courses</a>
+        <a href="login.html">Log in</a>
+        <a href="Signup.html">Register</a>
+        <a href="index.html">Homepage</a>
+      </nav>
+    </div>
+  </header>
+  <hr/>
 
-<section>
-  <h3 style="text-align:center;">What You’ll Learn</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Basic HTML tags, elements, and attributes</li>
-    <li>Structuring pages with headings, paragraphs, lists, images, and links</li>
-    <li>CSS selectors, properties, and styling text and layouts</li>
-    <li>Responsive design for mobile and desktop</li>
-    <li>Practical projects like building your own portfolio website</li>
-  </ul>
-</section>
+  <section data-aos="fade-up">
+    <h2>HTML & CSS</h2>
+    <p>
+      HTML and CSS form the foundation of web development. Learn to structure web pages using HTML and style them beautifully with CSS.
+    </p>
+  </section>
 
-<section>
-  <h3 style="text-align:center;">Why Learn HTML & CSS?</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Essential skills for web development and design</li>
-    <li>Easy to learn and a perfect starting point for beginners</li>
-    <li>Enables you to create your own websites and share your work online</li>
-    <li>Foundation for learning JavaScript and other advanced topics</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Real-World Uses</h3>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Build landing pages, blogs, portfolios, small business websites, and email templates.
-    HTML and CSS are used everywhere from personal sites to enterprise-grade web applications.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Get Started</h3>
-  <p style="max-width:800px; margin:auto; text-align:center;">
-    <a href="Signup.html">Sign up</a> and start building your first web page today!
-    Already have an account? <a href="login.html">Log in</a> to continue.
-  </p>
-</section>
-
-<hr/>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
+  <section data-aos="fade-up">
+    <h3>Course Curriculum</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li> Introduction to HTML</li>
+      <li> Formatting and Links</li>
+      <li> HTML Forms and Tables</li>
+      <li> Introduction to CSS</li>
+      <li> Box Model, Flexbox, Grid</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Data & AI</h3>
+  <section data-aos="fade-up">
+    <h3>What You’ll Learn</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li>How to build static websites using HTML5</li>
+      <li>Apply CSS for responsive layouts</li>
+      <li>Use Flexbox and Grid systems</li>
+      <li>Create forms, tables, and navigation menus</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
+  <section data-aos="fade-up">
+    <h3>Why Learn HTML & CSS?</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li>Essential for any web developer role</li>
+      <li>No backend required to build and deploy</li>
+      <li>In-demand skills for freelance & full-time jobs</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
+  <section data-aos="fade-up">
+    <h3>Watch a Sample Lesson</h3>
+    <div style="text-align:center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>Resources & Tools</h3>
     <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      <li><a href="#">HTML Cheatsheet (PDF)</a></li>
+      <li><a href="#">CSS Reference Guide</a></li>
+      <li><a href="#">Download Starter Template</a></li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Company</h3>
+  <section data-aos="fade-up">
+    <h3>Career Paths</h3>
     <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
+      <li>Frontend Developer</li>
+      <li>UI/UX Designer</li>
+      <li>Web Designer</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+  <section data-aos="fade-up">
+    <h3>FAQs</h3>
+    <ul>
+      <li><strong>Q:</strong> Do I need to know coding beforehand?<br><strong>A:</strong> No, this course is beginner-friendly.</li>
+      <li><strong>Q:</strong> Can I make a full website with just HTML and CSS?<br><strong>A:</strong> Yes, for static sites. You can upgrade to JavaScript later.</li>
+    </ul>
+  </section>
 
+  <section data-aos="fade-up">
+    <h3>Get Started</h3>
+    <p style="text-align:center">
+      <a href="Signup.html" class="button">Sign up</a> and begin your frontend journey! Already have an account? <a href="login.html">Log in</a>.
+    </p>
+  </section>
+
+  <hr/>
+  <footer>
+    <h2>Explore Top Courses for CS Students</h2>
+
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="Python.html">Python Programming</a></li>
+        <li><a href="Java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-bottom">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
