--- a/JavaScript.html
+++ b/JavaScript.html
@@ -1,122 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="page.css">
-<title>JavaScript - Udemy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="page.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>JavaScript - Udemy</title>
 </head>
 <body>
-<header>
-  <div class="header-container">
-    <span class="logo"><b>Udemy</b></span>
-    <nav class="nav-links">
-      <input class="search" type="text" placeholder="Search About Courses">
-      <a href="courses.html">Explore Courses</a>
-      <a href="login.html">Log in</a>
-      <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
-    </nav>
-  </div>
-</header>
-<hr/>
-<section>
-  <h2 style="text-align:center;">JavaScript</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    JavaScript is the programming language of the web, bringing your pages to life with interactivity and dynamic content.
-    It's used to build everything from simple sliders to full-scale web applications.
-  </p>
-</section>
+  <header>
+    <div class="header-container">
+      <span class="logo"><b>Udemy</b></span>
+      <nav class="nav-links">
+        <input class="search" type="text" placeholder="Search About Courses">
+        <a href="courses.html">Explore Courses</a>
+        <a href="login.html">Log in</a>
+        <a href="Signup.html">Register</a>
+        <a href="index.html">Homepage</a>
+      </nav>
+    </div>
+  </header>
+  <hr/>
 
-<section>
-  <h3 style="text-align:center;">What You’ll Learn</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>JavaScript syntax and core concepts like variables and functions</li>
-    <li>DOM manipulation to change page content dynamically</li>
-    <li>Handling events like clicks and form submissions</li>
-    <li>Basic animations and effects</li>
-    <li>Introduction to modern JavaScript ES6 features</li>
-  </ul>
-</section>
+  <section data-aos="fade-up">
+    <h2>JavaScript</h2>
+    <p>
+      JavaScript is the language of the web. Learn how to make your websites interactive, dynamic, and powerful with the most popular client-side scripting language.
+    </p>
+  </section>
 
-<section>
-  <h3 style="text-align:center;">Why Learn JavaScript?</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Most in-demand skill for web developers</li>
-    <li>Build dynamic, user-friendly websites and apps</li>
-    <li>Works seamlessly with HTML & CSS</li>
-    <li>Gateway to powerful frameworks like React, Vue, and Angular</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Real-World Uses</h3>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Interactive forms, games, web apps, animations, single-page applications (SPAs), and even backend development with Node.js.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Get Started</h3>
-  <p style="max-width:800px; margin:auto; text-align:center;">
-    <a href="Signup.html">Sign up</a> and start coding in JavaScript today!
-    Already have an account? <a href="login.html">Log in</a> to practice.
-  </p>
-</section>
-
-<hr/>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
+  <section data-aos="fade-up">
+    <h3>Course Curriculum</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li>✔️ Variables, Data Types, and Operators</li>
+      <li>✔️ Functions and Control Structures</li>
+      <li>✔️ DOM Manipulation and Events</li>
+      <li>✔️ ES6+ Features (let, const, arrow functions)</li>
+      <li>✔️ APIs, JSON, and Fetch</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Data & AI</h3>
+  <section data-aos="fade-up">
+    <h3>What You’ll Learn</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li>Write clean and functional JS code</li>
+      <li>Build interactive websites using DOM</li>
+      <li>Work with forms and browser events</li>
+      <li>Use modern ES6 features for better code</li>
+      <li>Connect front-end with back-end using APIs</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
+  <section data-aos="fade-up">
+    <h3>Watch a Sample Lesson</h3>
+    <div style="text-align:center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/W6NZfCO5SIk" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>FAQs</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li><strong>Q:</strong> Can I use this for front-end web development?<br><strong>A:</strong> Absolutely! JavaScript is essential for modern websites.</li>
+      <li><strong>Q:</strong> Do I need to know HTML/CSS first?<br><strong>A:</strong> Basic understanding helps, but it's not mandatory.</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
-    <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
-    </ul>
-  </div>
+  <section data-aos="fade-up">
+    <h3>Get Started</h3>
+    <p style="text-align:center">
+      <a href="Signup.html" class="button">Sign up</a> and become a front-end developer! Already have an account? <a href="login.html">Log in</a>.
+    </p>
+  </section>
 
-  <div class="footer-column">
-    <h3>Company</h3>
-    <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
-    </ul>
-  </div>
+  <hr/>
+ <footer>
+    <h2>Explore Top Courses for CS Students</h2>
 
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="Python.html">Python Programming</a></li>
+        <li><a href="Java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-bottom">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
