--- a/LinuxEssentials.html
+++ b/LinuxEssentials.html
@@ -1,122 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="page.css">
-<title>Linux Essentials - Udemy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="page.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>Linux Essentials - Udemy</title>
 </head>
 <body>
-<header>
-  <div class="header-container">
-    <span class="logo"><b>Udemy</b></span>
-    <nav class="nav-links">
-      <input class="search" type="text" placeholder="Search About Courses">
-      <a href="courses.html">Explore Courses</a>
-      <a href="login.html">Log in</a>
-      <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
-    </nav>
-  </div>
-</header>
-<hr/>
-<section>
-  <h2 style="text-align:center;">Linux Essentials</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Linux is an open-source operating system powering servers, cloud infrastructure, and developer tools worldwide.
-    Learning Linux basics helps you understand how computers really work under the hood.
-  </p>
-</section>
+  <header>
+    <div class="header-container">
+      <span class="logo"><b>Udemy</b></span>
+      <nav class="nav-links">
+        <input class="search" type="text" placeholder="Search About Courses">
+        <a href="courses.html">Explore Courses</a>
+        <a href="login.html">Log in</a>
+        <a href="Signup.html">Register</a>
+        <a href="index.html">Homepage</a>
+      </nav>
+    </div>
+  </header>
+  <hr/>
 
-<section>
-  <h3 style="text-align:center;">What You’ll Learn</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Basic Linux commands and terminal navigation</li>
-    <li>File permissions and directory structure</li>
-    <li>Package managers and installing software</li>
-    <li>Editing files with editors like nano or vim</li>
-    <li>Simple shell scripting fundamentals</li>
-  </ul>
-</section>
+  <section data-aos="fade-up">
+    <h2>Linux Essentials</h2>
+    <p>
+      Learn the basics of the Linux operating system, command-line tools, and system navigation used in development, DevOps, and cybersecurity roles.
+    </p>
+  </section>
 
-<section>
-  <h3 style="text-align:center;">Why Learn Linux?</h3>
-  <ul style="max-width:800px; margin:auto;">
-    <li>Widely used in cloud servers and DevOps</li>
-    <li>Boosts your confidence with command-line tools</li>
-    <li>Foundation for cybersecurity and networking roles</li>
-    <li>Free and open-source to experiment anytime</li>
-  </ul>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Real-World Uses</h3>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Running servers, managing deployments, automating tasks, and building developer tools.
-  </p>
-</section>
-
-<section>
-  <h3 style="text-align:center;">Get Started</h3>
-  <p style="max-width:800px; margin:auto; text-align:center;">
-    <a href="Signup.html">Sign up</a> and try your first Linux commands!
-    Already learning? <a href="login.html">Log in</a>.
-  </p>
-</section>
-
-<hr/>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
+  <section data-aos="fade-up">
+    <h3>Course Curriculum</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li>✔️ Introduction to Linux and Distributions</li>
+      <li>✔️ Terminal & Command Line Basics</li>
+      <li>✔️ File System Navigation & Permissions</li>
+      <li>✔️ Process Management & Package Installation</li>
+      <li>✔️ Shell Scripting Basics</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Data & AI</h3>
+  <section data-aos="fade-up">
+    <h3>What You’ll Learn</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li>Navigate Linux systems using commands</li>
+      <li>Manage files, directories, and users</li>
+      <li>Use bash shell for automation</li>
+      <li>Install, update, and configure packages</li>
+      <li>Prepare for Linux certification exams</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
+  <section data-aos="fade-up">
+    <h3>Watch a Sample Lesson</h3>
+    <div style="text-align:center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/JC1WcEQv5Zg" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>FAQs</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li><strong>Q:</strong> Do I need prior experience with Linux?<br><strong>A:</strong> No, this course is for beginners.</li>
+      <li><strong>Q:</strong> Which Linux distro is used?<br><strong>A:</strong> Ubuntu is used, but concepts apply across most distros.</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
-    <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
-    </ul>
-  </div>
+  <section data-aos="fade-up">
+    <h3>Get Started</h3>
+    <p style="text-align:center">
+      <a href="Signup.html" class="button">Sign up</a> and begin your Linux journey! Already have an account? <a href="login.html">Log in</a>.
+    </p>
+  </section>
 
-  <div class="footer-column">
-    <h3>Company</h3>
-    <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
-    </ul>
-  </div>
+  <hr/>
+  <footer>
+    <h2>Explore Top Courses for CS Students</h2>
 
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="Python.html">Python Programming</a></li>
+        <li><a href="Java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-bottom">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
