--- a/Signup.html
+++ b/Signup.html
@@ -119,7 +119,6 @@
 
 <script>
 function validateForm() {
-  let isValid = true;
 
   const name = document.getElementById("name").value.trim();
   const mobile = document.getElementById("numb").value.trim();
@@ -128,51 +127,61 @@ function validateForm() {
   const confirmPassword = document.getElementById("Confirmpass").value;
 
   
-  name.textContent = "";
-  mobile.textContent = "";
-  email.textContent = "";
-  password.textContent = "";
-  confirmPassword.textContent = "";
+  document.getElementById("demo1").textContent = "";
+  document.getElementById("demo2").textContent = "";
+  document.getElementById("demo3").textContent = "";
+  document.getElementById("demo4").textContent = "";
+  document.getElementById("demo5").textContent = "";
 
- 
+  
 const namePattern = /^[A-Za-z\s]{2,}$/;
 if (!namePattern.test(name)) {
-  name.textContent = "Enter a valid name (only letters, at least 2 characters).";
-  name.style.color = "red";
-  isValid = false;
+  document.getElementById("demo1").textContent = "Enter a valid name (only letters, at least 2 characters).";
+  document.getElementById("demo1").style.color = "red";
 }
 
 
   
   if (!/^\d{10}$/.test(mobile)) {
-    mobile.textContent = "Enter a valid 10-digit mobile number.";
-    mobile.style.color = "red";
-    isValid = false;
+    document.getElementById("demo2").textContent = "Enter a valid 10-digit mobile number.";
+    document.getElementById("demo2").style.color = "red";
   }
 
   
   const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
   if (!emailPattern.test(email)) {
-    email.textContent = "Enter a valid email address.";
-    email.style.color = "red";
-    isValid = false;
+    document.getElementById("demo3").textContent = "Enter a valid email address.";
+    document.getElementById("demo3").style.color = "red";
   }
 
-  
-  if (password.length < 6) {
-    password.textContent = "Password must be at least 6 characters.";
-    password.style.color = "red";
-    isValid = false;
-  }
+
+if (password.length < 8) {
+  document.getElementById("demo4").textContent = "Password must be at least 8 characters.";
+  document.getElementById("demo4").style.color = "red";
+} else if (!/[A-Z]/.test(password)) {
+  document.getElementById("demo4").textContent = "Password must contain at least one uppercase letter.";
+  document.getElementById("demo4").style.color = "red";
+} else if (!/[a-z]/.test(password)) {
+  document.getElementById("demo4").textContent = "Password must contain at least one lowercase letter.";
+  document.getElementById("demo4").style.color = "red";
+} else if (!/\d/.test(password)) {
+  document.getElementById("demo4").textContent = "Password must contain at least one number.";
+  document.getElementById("demo4").style.color = "red";
+} else if (!/[^A-Za-z0-9]/.test(password)) {
+  document.getElementById("demo4").textContent = "Password must contain at least one special character.";
+  document.getElementById("demo4").style.color = "red";
+} else if (/\s/.test(password)) {
+  document.getElementById("demo4").textContent = "Password should not contain spaces.";
+  document.getElementById("demo4").style.color = "red";
+}
+
 
   
   if (password !== confirmPassword) {
-    confirmPassword.textContent = "Passwords do not match.";
-    confirmPassword.style.color = "red";
-    isValid = false;
+    document.getElementById("demo5").textContent = "Passwords do not match.";
+    document.getElementById("demo5").style.color = "red";
   }
 
-  return isValid;
 }
 </script>
 
