--- a/login.html
+++ b/login.html
@@ -108,33 +108,45 @@
 
 <script>
 function validateForm() {
-  let isValid = true;
+  
 
   const email = document.getElementById("email").value.trim();
   const password = document.getElementById("pass").value;
 
   
-  email.textContent = "";
-  password.textContent = "";
+  document.getElementById("demo1").textContent = "";
+  document.getElementById("demo2").textContent = "";
  
 
 
   
   const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
   if (!emailPattern.test(email)) {
-    email.textContent = "Enter a valid email address.";
-    email.style.color = "red";
-    isValid = false;
+    document.getElementById("demo1").textContent = "Enter a valid email address.";
+    document.getElementById("demo1").style.color = "red";
   }
 
   
-  if (password.length < 6) {
-    password.textContent = "Password must be at least 6 characters.";
-    password.style.color = "red";
-    isValid = false;
-  }
+  if (password.length < 8) {
+  document.getElementById("demo2").textContent = "Password must be at least 8 characters.";
+  document.getElementById("demo2").style.color = "red";
+} else if (!/[A-Z]/.test(password)) {
+  document.getElementById("demo2").textContent = "Password must contain at least one uppercase letter.";
+  document.getElementById("demo2").style.color = "red";
+} else if (!/[a-z]/.test(password)) {
+  document.getElementById("demo2").textContent = "Password must contain at least one lowercase letter.";
+  document.getElementById("demo2").style.color = "red";
+} else if (!/\d/.test(password)) {
+  document.getElementById("demo2").textContent = "Password must contain at least one number.";
+  document.getElementById("demo2").style.color = "red";
+} else if (!/[^A-Za-z0-9]/.test(password)) {
+  document.getElementById("demo2").textContent = "Password must contain at least one special character.";
+  document.getElementById("demo2").style.color = "red";
+} else if (/\s/.test(password)) {
+  document.getElementById("demo2").textContent = "Password should not contain spaces.";
+  document.getElementById("demo2").style.color = "red";
+}
 
-  return isValid;
 }
 </script>
 
